# docs/swagger.json
@@ -261,6 +261,11 @@
         },
         "/chats/{chat_id}/messages": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all messages for a specific chat",
                 "consumes": [
                     "application/json"
@@ -273,6 +278,13 @@
                 ],
                 "summary": "Get chat messages",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Chat ID",
@@ -314,6 +326,11 @@
         },
         "/chats/{user_id}/chats": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all chats for a specific user",
                 "consumes": [
                     "application/json"
@@ -326,6 +343,13 @@
                 ],
                 "summary": "Get user chats",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "User ID",
@@ -508,6 +532,9 @@
                 },
                 "sender_id": {
                     "type": "integer"
+                },
+                "sender_name": {
+                    "type": "string"
                 },
                 "text": {
                     "type": "string"
