# internal/domain/models/message.go
@@ -6,6 +6,7 @@ type Message struct {
 	ID        int64       `json:"id" db:"id"`
 	ChatID    int64       `json:"chat_id" db:"chat_id"`
 	SenderID  int64       `json:"sender_id" db:"sender_id"`
+	SenderName string	  `json:"sender_name" db:"sender_name"`
 	Content   string      `json:"text" db:"text"`
 	CreatedAt time.Time   `json:"created_at" db:"created_at"`
 	ExpiredAt time.Time   `json:"expired_at" db:"expired_at"`
